--- a/notebooks/results/experiment-2.ipynb
+++ b/notebooks/results/experiment-2.ipynb
@@ -11,20 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,11 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:rdflib:RDFLib Version: 4.2.1\n"
+     ]
+    }
+   ],
    "source": [
     "from hypotest.ontologies import molecular_subgraph, full_graph\n",
     "from grontocrawler.graph import produce_graph\n",
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('http://plumdeq.xyz/ontologies/hypothesis/Synovial_inflammation', 'http://plumdeq.xyz/ontologies/hypothesis/Cartilage_degeneration')\n"
+      "(u'http://plumdeq.xyz/ontologies/hypothesis/Positive_regulation_of_Chondrocytes_catabolic_activity', 'http://plumdeq.xyz/ontologies/hypothesis/Loss_of_collagen')\n"
      ]
     }
    ],
