adds 4th experiment with the generalization of the hypothesis

--- a/notebooks/results/experiment-3.ipynb
+++ b/notebooks/results/experiment-3.ipynb
@@ -853,6 +853,42 @@
     "fig = plot.get_figure()\n",
     "fig.savefig(os.path.join(path_to_images, 'local_importance.pdf'), bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most important factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrr}\n",
+      "\\toprule\n",
+      "{} &  \\$H\\_\\{full\\}\\$ &  \\$H\\_\\{sub\\}\\$ \\\\\n",
+      "\\midrule\n",
+      "Biochemical imbalance                           &    0.107143 &   0.166667 \\\\\n",
+      "Cartilage degeneration                          &    0.142857 &   0.166667 \\\\\n",
+      "Positive regulation of TNF alpha overproduction &    0.142857 &   0.166667 \\\\\n",
+      "Synovial inflammation                           &    0.142857 &   0.166667 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[data['$H_{sub}$'] > 0.16].to_latex())"
+   ]
   }
  ],
  "metadata": {
